Fix the bug that toggle CapsLock shortcut does not work after using the partial screenshot

In previous code, when the partial screenshot is triggered, all of key
events are stopped from propagation. As result, the release of the partial
screenshot accelerator is unknown to AcceleratorHistory. It would lead
to malfunction of the accelerators which rely on AcceleratorHistory,
such as toggle CapsLock shortcut.

This CL fixes the bug by updating AcceleratorHistory in the code block
which processes the partial screenshot accelerator.

Test: ash_unittests
Bug: 920032
Change-Id: Ie4f553a841869db82f2710329e7968aa058713f4
Reviewed-on: https://chromium-review.googlesource.com/c/1408221
Reviewed-by: Ahmed Fakhry <afakhry@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Andrew Xu <andrewxu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#625273}